<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".MainActivity"
        android:id="@+id/coordinatorLayout">

    <TextView
            android:id="@+id/kanji_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kanji_text"
            android:textAlignment="center"
            android:textSize="200sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/answer_text"/>

    <EditText
            android:id="@+id/answer_text"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:hint="@string/answer_text"
            android:textAlignment="center"
            android:textSize="40sp"
            android:maxLength="20"
            android:textStyle="bold"
            android:inputType="textCapWords"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/kanji_text"
            app:layout_constraintBottom_toTopOf="@+id/next_button"/>

    <Button
            android:id="@+id/next_button"
            android:text="@string/next_button"
            android:textSize="30sp"
            android:layout_width="130dp"
            android:layout_height="130dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/answer_text"
            app:layout_constraintBottom_toBottomOf="parent"
    />

</androidx.constraintlayout.widget.ConstraintLayout>